--- a/detyre.html
+++ b/detyre.html
@@ -90,7 +90,7 @@
     
         <p>For those not familiar, Maida Heatter is an icon, especially in the baking world. Dubbed the Queen of Cake, her expansive culinary career included 9 cookbooks, recipes for the Times, a restaurant, and three James Beard Awards, Baker and author Dorie Greenspan once said "Whenever someone tells me they want to learn to bake, I tell them to start with Maida Heater's books. That's what I did." This latest cookbook is a testament to Maida's legacy. She passed away only 2 months after this book was published. She leaves behind an incalculable amount of inspiration to bakers and cooks all over the world.</p>
 
-        <img src="/assets/img/carrot-cake.jpg" alt="">
+        <img src="assets/img/carrot-cake.jpg" alt="Torte ">
         <span>
         <h3>Common Tiramisu Questions - Answered</h3><br>
         <h4>What kind of rum do I use in tiramisu?</h4>
